test/cases/errors/harmony-import-missing/errors.js
module.exports = [
	[
		/Can't resolve '.\/missing'/
	]
];
